# leafsee-simple

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Django apps (DjnA).md  Git convention (GitC).md  Models Structures (MS).md  Pages Requirements (PFR,).txt  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tox.ini
apps/authentication/: backends.py  forms.py  models.py  urls.py  validators.py  views.py
apps/authentication/migrations/: 0002_alter_leafseeuser_description_and_more.py  0004_leafseeuser_is_banned_subscription_and_more.py  0005_alter_leafseeuser_password_change_date_and_more.py
apps/templates/base/: base.html
apps/videos/: models.py  serializers.py  urls.py  views.py
apps/videos/migrations/: 0001_initial.py  0003_rename_ratings_comment_rated_and_more.py  (+2 more)
backend/: example.env  manage.py
backend/configs/: asgi.py  example.env  settings.py  tests.py  urls.py  wsgi.py
backend/leafsee_simple/: asgi.py  settings.py  wsgi.py
backend/templatetags/: load_files.py
backend/wrappers/: model_wrappers.py
docker_compose/leafsee_simple_dev/: docker-compose.yml
frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: index.js  index.jsx
leafsee_simple/: example.env  settings.py  tests.py  urls.py
nginx_configs/dev/: nginx.conf
util_tools/: scripts.py
util_tools/poetry/: scripts.py  server_manager.py
util_tools/templatetags/: load_files.py
util_tools/wrappers/: model_wrappers.py
(+77 files in other folders)
