[tool.poetry]
name = "leafsee simple"
version = "0.1.0"
description = ""
authors = ["V"]
readme = "README.md"
packages = [{ include = "util_tools" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
m = "util_tools.scripts:manager"
t = "util_tools.scripts:tailwind"
full_migrate = "util_tools.scripts:full_migrate"
init = "util_tools.scripts:init"
lint = "util_tools.scripts:flake8"
format = "util_tools.scripts:black"
expreq = "util_tools.scripts:export_requirements"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
